Registro e Integración del Facebook Login Button
Se ha terminado la integración del registro y la integración del botón
de inicio de sesión de Facebook.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="facebook_app_id">744230295678634</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
